--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
 </head>
 
 <body>
+    <div class="loader-container">
+        <div class="dot d1"></div>
+        <div class="dot d2"></div>
+        <div class="dot d3"></div>
+    </div>
     <div class="main-container">
         <header>
-            <img src="logo/ohmyfood.png" alt="logo" class="img-ohmyfood">
+            <img src="./public/logo/ohmyfood.png" alt="logo" class="img-ohmyfood">
             <div class="localisation-header fa-solid fa-location-dot">
                 <p>Paris, Belleville</p>
             </div>
@@ -63,11 +68,11 @@
                 <h2>Restaurants</h2>
                 <div class="grille-restaurants">
                     <article class="cards-restaurants ">
-                        <a href="restaurants/Restaurant-palette-du-gout.html">
+                        <a href="./restaurants/Restaurant-palette-du-gout.html">
                             <div class="new">
                                 <p>Nouveau</p>
                             </div>
-                            <img src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat du jour">
+                            <img src="./public/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat du jour">
                             <h3 class="card-title">La palette du goût</h3>
                             <p class="card-subtitle">Ménilmontant</p>
                         </a>
@@ -81,7 +86,7 @@
                             <div class="new">
                                 <p>Nouveau</p>
                             </div>
-                            <img src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat du jour">
+                            <img src="./public/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat du jour">
                             <h3 class="card-title">La note enchantée</h3>
                             <p class="card-subtitle">Charonne</p>
                         </a>
@@ -92,23 +97,25 @@
                     </article>
                     <article class="cards-restaurants ">
                         <a href="restaurants/Restaurant-a-la-francais.html">
-                            <img src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat du jour">
+                            <img src="./public/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat du jour">
                             <h3 class="card-title">A la française</h3>
                             <p class="card-subtitle">Cité Rouge</p>
                         </a>
                         <div class="card-logo">
                             <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
                         </div>
                     </article>
                     <article class="cards-restaurants ">
                         <a href="restaurants/Restaurant-Le-délice-des-sens.html">
-                            <img src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            <img src="./public/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                 alt="Plat du jour">
                             <h3 class="card-title">Le délice des sens</h3>
                             <p class="card-subtitle">Folie-Méricourt</p>
                         </a>
                         <div class="card-logo">
                             <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
                         </div>
                     </article>
                 </div>
@@ -121,7 +128,9 @@
                     <h3> <i class="fa-solid fa-utensils"></i>Proposer un restaurant</h3>
                     <h3> <i class="fa-solid fa-handshake-angle"></i>Devenir un partenaire</h3>
                     <p>Mentions légales</p>
+                    <a href="#">
                     <p>Contact</p>
+                </a>
                 </div>
             </div>
         </footer>
