--- a/restaurants/Restaurant-Le-délice-des-sens.html
+++ b/restaurants/Restaurant-Le-délice-des-sens.html
@@ -9,10 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Playball&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
 
 <body>
@@ -20,7 +23,7 @@
         <header>
             <nav class="navbar">
                 <a href="../index.html" class="bouton-retour"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
-                <img src="../logo/ohmyfood.png" alt="logo" class="img-ohmyfood">
+                <img src="../public/logo/ohmyfood.png" alt="logo" class="img-ohmyfood">
             </nav>
         </header>
         <main>
@@ -29,7 +32,10 @@
             <div class="menu">
                 <div class="menu-title">
                     <h1>Le délice des sens</h1>
-                    <i class=" card-logo fa-regular fa-heart"></i>
+                    <div class="card-logo">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
                 <div class="menus-entrees-plats-desserts">
                     <div class="entrees">
@@ -47,7 +53,7 @@
                                         <p class="prix">25€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -61,7 +67,7 @@
                                         <p class="prix">35€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -75,7 +81,7 @@
                                         <p class="prix">40€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -96,7 +102,7 @@
                                         <p class="prix">40€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -110,7 +116,7 @@
                                         <p class="prix">35€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -124,7 +130,7 @@
                                         <p class="prix">44€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -145,7 +151,7 @@
                                         <p class="prix">76€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -159,7 +165,7 @@
                                         <p class="prix">22€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -173,7 +179,7 @@
                                         <p class="prix">23€</p>
                                     </div>
                                 </div>
-                                <div class="animation">
+                                <div class="menu-prix">
                                     <i class="fa-solid fa-check"></i>
                                 </div>
                             </article>
@@ -191,7 +197,9 @@
                     <h3> <i class="fa-solid fa-utensils"></i>Proposer un restaurant</h3>
                     <h3> <i class="fa-solid fa-handshake-angle"></i>Devenir un partenaire</h3>
                     <p>Mentions légales</p>
-                    <p>Contact</p>
+                    <a href="#">
+                        <p>Contact</p>
+                    </a>
                 </div>
             </div>
         </footer>
