--- a/restaurants/Restaurant-a-la-francais.html
+++ b/restaurants/Restaurant-a-la-francais.html
@@ -8,6 +8,9 @@
     <title>Ohmyfood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https : //fonts.googleapis.com/css2?family= Shrikhand & display=swap" rel="stylesheet" >
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Playball&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap"
@@ -27,8 +30,7 @@
             </nav>
         </header>
         <main>
-            <div class="image-de-fond">
-                <img src="../public/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"></i>
+            <div class="image-de-fond image-de-fond-francais">
             </div>
             <div class="menu">
                 <div class="menu-title">
