--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
                     </a>
                 </button>
             </section>
-            <section class="grid-fonctionnement">
+            <section class="fonctionnement">
                 <h2>Fonctionnement</h2>
-                <div class="flex">
-                    <div class="Fonction-1">
+                <div class="fonction">
+                    <div class="fonction-1">
                         <button class="button-fonctionnement ">
                             <i class=" fa-solid fa-mobile-screen-button"></i>
                             <h3>Choisissez un restaurant</h3>
                         </button>
                     </div>
-                    <div class="Fonction-2">
+                    <div class="fonction-2">
                         <button class="button-fonctionnement">
                             <i class=" fa-solid fa-list-ul"></i>
                             <h3>Composez votre menu</h3>
                         </button>
                     </div>
-                    <div class="Fonction-3">
+                    <div class="fonction-3">
                         <button class="button-fonctionnement">
                             <i class=" fa-solid fa-store"></i>
                             <h3>Dégustez au restaurant</h3>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </section>
-            <section class="fond-color2">
+            <section class="restaurants">
                 <h2>Restaurants</h2>
                 <div class="grille-restaurants">
                     <article class="cards-restaurants ">
