--- a/restaurants/Restaurant-la-note-enchantée.html
+++ b/restaurants/Restaurant-la-note-enchantée.html
@@ -7,11 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Playball&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Raleway:wght@400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -50,7 +47,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Accompagnées de leur crème à la truffe</p>
-                                        <p class="prix">25€</p>
+                                        <a class="prix">25€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -64,7 +61,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Sur blini à la farine de blé noir</p>
-                                        <p class="prix">35€</p>
+                                        <a class="prix">35€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -78,7 +75,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Marinés aux zestes d'orange</p>
-                                        <p class="prix">20€</p>
+                                        <a class="prix">20€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -92,7 +89,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Confiture de figue et pain toasté</p>
-                                        <p class="prix">35€</p>
+                                        <a class="prix">35€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -113,7 +110,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Sur lit de purée de céleri-rave</p>
-                                        <p class="prix">40€</p>
+                                        <a class="prix">40€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -127,7 +124,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Purée de patate douce</p>
-                                        <p class="prix">35€</p>
+                                        <a class="prix">35€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -141,7 +138,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Et riz sauvage aux zestes de citron</p>
-                                        <p class="prix">45€</p>
+                                        <a class="prix">45€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -162,7 +159,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Glace au caramel brun et sel Guérande</p>
-                                        <p class="prix">18€</p>
+                                        <a class="prix">18€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -176,7 +173,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Avec son coulis de citron</p>
-                                        <p class="prix">22€</p>
+                                        <a class="prix">22€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -190,7 +187,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Déstructurée</p>
-                                        <p class="prix">23€</p>
+                                        <a class="prix">23€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
