--- a/restaurants/Restaurant-a-la-francais.html
+++ b/restaurants/Restaurant-a-la-francais.html
@@ -7,14 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https : //fonts.googleapis.com/css2?family= Shrikhand & display=swap" rel="stylesheet" >
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Playball&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap"
-        rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Raleway:wght@400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -53,7 +47,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Aux zestes d'orange</p>
-                                        <p class="prix">25€</p>
+                                        <a class="prix">25€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -67,7 +61,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Carotte,panais,topinambour</p>
-                                        <p class="prix">35€</p>
+                                        <a class="prix">35€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -81,7 +75,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Revisitée</p>
-                                        <p class="prix">20€</p>
+                                        <a class="prix">20€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -102,7 +96,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Accompagnées d'une purée de panais</p>
-                                        <p class="prix">40€</p>
+                                        <a class="prix">40€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -116,7 +110,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Et Parmentier de pommes de terre</p>
-                                        <p class="prix">35€</p>
+                                        <a class="prix">35€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -130,7 +124,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Sur son lit de gnocchis aux légumes</p>
-                                        <p class="prix">44€</p>
+                                        <a class="prix">44€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -151,7 +145,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Et purée de noisettes</p>
-                                        <p class="prix">18€</p>
+                                        <a class="prix">18€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -165,7 +159,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Revisité</p>
-                                        <p class="prix">22€</p>
+                                        <a class="prix">22€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -179,7 +173,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Myrtilles et pâte d'amande</p>
-                                        <p class="prix">23€</p>
+                                        <a class="prix">23€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
