--- a/restaurants/Restaurant-palette-du-gout.html
+++ b/restaurants/Restaurant-palette-du-gout.html
@@ -7,11 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Playball&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Raleway:wght@400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -50,7 +47,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Au piment d'Espelette</p>
-                                        <p class="prix">25€</p>
+                                        <a class="prix">25€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -64,7 +61,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Et ses copeaux de truffe noire</p>
-                                        <p class="prix">35€</p>
+                                        <a class="prix">35€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -78,7 +75,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Assaisonné à la truffe sur lit de caviar</p>
-                                        <p class="prix">20€</p>
+                                        <a class="prix">20€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -99,7 +96,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Accompagné de sa ribambelle de légumes</p>
-                                        <p class="prix">40€</p>
+                                        <a class="prix">40€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -113,7 +110,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>À la truffe noire sur sa purée de panais</p>
-                                        <p class="prix">35€</p>
+                                        <a class="prix">35€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -127,7 +124,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Aux agrumes</p>
-                                        <p class="prix">44€</p>
+                                        <a class="prix">44€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -148,7 +145,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Revisité</p>
-                                        <p class="prix">18€</p>
+                                        <a class="prix">18€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -162,7 +159,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Et glace à la vanille de Madagascar</p>
-                                        <p class="prix">22€</p>
+                                        <a class="prix">22€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
@@ -176,7 +173,7 @@
                                     </div>
                                     <div class="card-text">
                                         <p>Au piment d'Espelette et à la truffe noire</p>
-                                        <p class="prix">23€</p>
+                                        <a class="prix">23€</a>
                                     </div>
                                 </div>
                                 <div class="menu-prix">
