--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700;800&family=Raleway:wght@400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./public/css/style.css">
@@ -32,32 +32,30 @@
             <section class="fond-color">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <button class="button-pink">
-                    <a href="#">
+                <a href="#" class="button-pink">
                         <p>Explorer nos restaurants</p>
                     </a>
-                </button>
             </section>
             <section class="fonctionnement">
                 <h2>Fonctionnement</h2>
                 <div class="fonction">
                     <div class="fonction-1">
-                        <button class="button-fonctionnement ">
+                        <div class="button-fonctionnement ">
                             <i class=" fa-solid fa-mobile-screen-button"></i>
                             <h3>Choisissez un restaurant</h3>
-                        </button>
+                        </div>
                     </div>
                     <div class="fonction-2">
-                        <button class="button-fonctionnement">
+                        <div class="button-fonctionnement">
                             <i class=" fa-solid fa-list-ul"></i>
                             <h3>Composez votre menu</h3>
-                        </button>
+                        </div>
                     </div>
                     <div class="fonction-3">
-                        <button class="button-fonctionnement">
+                        <div class="button-fonctionnement">
                             <i class=" fa-solid fa-store"></i>
                             <h3>Dégustez au restaurant</h3>
-                        </button>
+                        </div>
                     </div>
                 </div>
             </section>
