--- a/restaurants/Restaurant-la-note-enchantée.html
+++ b/restaurants/Restaurant-la-note-enchantée.html
@@ -208,7 +208,7 @@
                     <h3> <i class="fa-solid fa-utensils"></i>Proposer un restaurant</h3>
                     <h3> <i class="fa-solid fa-handshake-angle"></i>Devenir un partenaire</h3>
                     <p>Mentions légales</p>
-                    <a href="#">
+                     <a href="mail@hotmail.com">
                         <p>Contact</p>
                     </a>
                 </div>
